--- a/android/.gitignore
+++ b/android/.gitignore
@@ -2,6 +2,8 @@
 .gradle
 /local.properties
 /.idea/workspace.xml
+/.idea/gradle.xml
+/.idea/misc.xml # Should maybe be in the project but it'll be okay without it...
 /.idea/libraries
 /build
 /captures
