--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -15,7 +15,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PlayActivity"></activity>
+        <activity android:name=".activities.PlayActivity" />
+        <activity android:name=".activities.EndGameActivity"></activity>
     </application>
 
 </manifest>
