--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -20,17 +20,18 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activities.MainMenuActivity">
+        <activity android:name=".activities.MainMenuActivity" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.PlayActivity" />
-        <activity android:name=".activities.MultiplayerActivity" />
+        <activity android:name=".activities.PlayActivity" android:screenOrientation="portrait"/>
+        <activity android:name=".activities.MultiplayerActivity" android:screenOrientation="portrait"/>
         <activity
             android:name=".activities.CategoryActivity"
+            android:screenOrientation="portrait"
             android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
@@ -40,7 +41,7 @@
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".activities.EndGameActivity" />
+        <activity android:name=".activities.EndGameActivity" android:screenOrientation="portrait"/>
     </application>
 
 </manifest>
