--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -16,22 +16,22 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activities.MainMenuActivity">
+        <activity android:name=".activities.MainMenuActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Activities.PlayActivity" />
-        <activity android:name=".Activities.MultiplayerActivity"/>
-        <activity android:name=".Activities.CategoryActivity" android:launchMode="singleTop">
+        <activity android:name=".activities.PlayActivity" />
+        <activity android:name=".activities.MultiplayerActivity"/>
+        <activity android:name=".activities.CategoryActivity" android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
             <meta-data android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
         </activity>
-        <activity android:name=".Activities.EndGameActivity"/>
+        <activity android:name=".activities.EndGameActivity"/>
 
     </application>
 </manifest>
