--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -52,5 +52,6 @@
             android:screenOrientation="portrait" />
         <activity android:name=".activities.ResultActivity"></activity>
         <activity android:name=".activities.EndMultiplayerActivity"></activity>
+        <activity android:name=".activities.DemoActivity"></activity>
     </application>
 </manifest>
